force-app/main/default/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Always_Show_In_My_Subscriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays this Area of Interest or List under a BU in My Subscriptions so constituents can opt in/out. Defaults to No Preference, indicating related items may be sent. If someone has explicitly opted in/out, it WILL display, irrespective of this setting.</inlineHelpText>
        <label>Always Show In My Subscriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_for_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this Subscription will be made available for ASU constituents to "opt-in" when managing their subscriptions. Please note that selecting this option requires that your team has a plan for engaging newly opted-in subscribers.</inlineHelpText>
        <label>Available for Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>et4ae5__Business_Unit__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HashSubscriptionId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HashSubscriptionId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IER_Privacy_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the "IER Private in Salesforce" field was recently changed; used by a scheduled job to set IER records' visibility</description>
        <inlineHelpText>Indicates whether the "IER Private in Salesforce" field was recently changed</inlineHelpText>
        <label>IER Privacy Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IER_Private_in_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, emails sent via a Salesforce Campaign associated with this Subscription will be Private to the Queue that owns this Subscription record.</inlineHelpText>
        <label>IER Private in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Child Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_Privacy_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the "Subscriber Private in Salesforce" field was recently changed; used by a scheduled job to set Subscriber records' Owner values</description>
        <inlineHelpText>Indicates whether the "Subscriber Private in Salesforce" field was recently changed</inlineHelpText>
        <label>Subscriber Privacy Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscriber_Private_in_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Makes this record and associated Contact or Lead Subscriber records only visible to the Users that are members of the Queue listed as this Subscription's Owner. Note that the Subscriber record must be owned by a Queue in order to check this box.</inlineHelpText>
        <label>Subscriber Private in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Center_Description__c</fullName>
        <inlineHelpText>A short (up to 1000 character) description to be displayed for ASU constituents who are managing their subscription preferences in the subscription center.</inlineHelpText>
        <label>Subscription Center Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Description__c</fullName>
        <label>Subscription Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <inlineHelpText>Business Unit types are primarily used to store opt-in information 
Area of Interest types store general interests, within a BU (e.g. Financial Aid, Academic Research) 
List types store explicit list (e.g. newsletter, membership)</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Unit</fullName>
                </value>
                <value>
                    <fullName>Area of Interest</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Business Unit and List subscriptions being used by the Subscription Center and Marketing Cloud. This object stores the list-level details for emails where we need to store a subscriber/contact/lead preference. This object is owned by the Enterprise Marketing Hub and the Marketing Cloud Governance team. Any changes to this object should be approved/reviewed by them.</description>
    <label>Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Available_for_Opt_In__c</columns>
        <columns>Subscription_Type__c</columns>
        <columns>IER_Private_in_Salesforce__c</columns>
        <columns>Subscriber_Private_in_Salesforce__c</columns>
        <columns>Subscription_Description__c</columns>
        <columns>Subscription_Center_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Business_Units</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Available_for_Opt_In__c</columns>
        <columns>Subscription_Type__c</columns>
        <columns>IER_Private_in_Salesforce__c</columns>
        <columns>Subscriber_Private_in_Salesforce__c</columns>
        <columns>Subscription_Description__c</columns>
        <columns>Subscription_Center_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Type__c</field>
            <operation>equals</operation>
            <value>Business Unit</value>
        </filters>
        <label>Business Units</label>
    </listViews>
    <listViews>
        <fullName>MC_ASU_Alumni_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Type__c</columns>
        <columns>Subscription_Description__c</columns>
        <columns>Subscription_Center_Description__c</columns>
        <columns>Always_Show_In_My_Subscriptions__c</columns>
        <columns>Available_for_Opt_In__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Queue</filterScope>
        <label>MC: ASU Alumni</label>
        <queue>MC_ASU_Alumni</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MC_ASU_Enterprise_Marketing_Hub_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Type__c</columns>
        <columns>Subscription_Description__c</columns>
        <columns>Subscription_Center_Description__c</columns>
        <columns>Available_for_Opt_In__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Queue</filterScope>
        <label>MC: ASU Enterprise Marketing Hub</label>
        <queue>MC_ASU_Enterprise_Marketing_Hub</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MC_Alumni_Partner_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Type__c</columns>
        <columns>Subscription_Description__c</columns>
        <columns>Subscription_Center_Description__c</columns>
        <columns>Available_for_Opt_In__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Queue</filterScope>
        <label>MC: Alumni Partner</label>
        <queue>MC_Alumni_Partner</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MC_Future_Student_Communications_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Type__c</columns>
        <columns>Subscription_Description__c</columns>
        <columns>Subscription_Center_Description__c</columns>
        <columns>Available_for_Opt_In__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Queue</filterScope>
        <label>MC: Future Student Communications</label>
        <queue>MC_Future_Student_Communications</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MC_Subscription_Admins_Subscription</fullName>
        <filterScope>Queue</filterScope>
        <label>MC: Subscription Admins</label>
        <queue>MC_Subscription_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Require_Queue_Ownership_IF_Private_in_Sf</fullName>
        <active>true</active>
        <description>A record must be owned by a Queue if the related Subscriber or IER records are to be set to Private, because a Queue is the mechanism for giving access to these records for the staff that should be able to see it.</description>
        <errorConditionFormula>LEFT(OwnerId,3) &lt;&gt; "00G" &amp;&amp;  OR(Subscriber_Private_in_Salesforce__c, IER_Private_in_Salesforce__c)</errorConditionFormula>
        <errorMessage>A record must be owned by a Queue if the Subscriber or IER records are set to Private. If you do not have access to a team Queue, contact your Salesforce administrator to help with setting up a Queue that will allow your team access to private records.</errorMessage>
    </validationRules>
</CustomObject>