force-app/main/default/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Subscription_Type__c</columns>
    <columns>IER_Private_in_Salesforce__c</columns>
    <columns>Subscriber_Private_in_Salesforce__c</columns>
    <columns>Subscription_Description__c</columns>
    <columns>Subscription_Center_Description__c</columns>
    <columns>Always_Show_In_My_Subscriptions__c</columns>
    <columns>Available_for_Opt_In__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HashSubscriptionId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>