force-app/main/default/objects/Subscription__c/listViews/Alumni_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Alumni_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>IER_Private_in_Salesforce__c</columns>
    <columns>Subscriber_Private_in_Salesforce__c</columns>
    <columns>Subscription_Description__c</columns>
    <columns>Subscription_Center_Description__c</columns>
    <columns>Available_for_Opt_In__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>contains</operation>
        <value>alumni</value>
    </filters>
    <label>Alumni Subscriptions</label>
</ListView>