force-app/main/default/objects/Subscription__c/listViews/Business_Units.listView-meta.xml
<ListView>
    <fullName>Business_Units</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Available_for_Opt_In__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>IER_Private_in_Salesforce__c</columns>
    <columns>Subscriber_Private_in_Salesforce__c</columns>
    <columns>Subscription_Description__c</columns>
    <columns>Subscription_Center_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subscription_Type__c</field>
        <operation>equals</operation>
        <value>Business Unit</value>
    </filters>
    <label>Business Units</label>
</ListView>