force-app/main/default/objects/Subscription__c/listViews/MC_ASU_Enterprise_Marketing_Hub_Subscription.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Enterprise_Marketing_Hub_Subscription</fullName>
    <columns>NAME</columns>
    <columns>Subscription_Type__c</columns>
    <columns>Subscription_Description__c</columns>
    <columns>Subscription_Center_Description__c</columns>
    <columns>Available_for_Opt_In__c</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Enterprise Marketing Hub</label>
    <queue>MC_ASU_Enterprise_Marketing_Hub</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>