force-app/main/default/objects/Subscription__c/listViews/MC_ASU_Graduate_College_Subscription.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Graduate_College_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Graduate College</label>
    <queue>MC_ASU_Graduate_College</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>