force-app/main/default/objects/Subscription__c/listViews/MC_ASU_Marketing_Academy_Subscription.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Marketing_Academy_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Marketing Academy</label>
    <queue>MC_ASU_Marketing_Academy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>