force-app/main/default/objects/Subscription__c/listViews/MC_ASU_Provost_Subscription.listView-meta.xml
<ListView>
    <fullName>MC_ASU_Provost_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: ASU Provost</label>
    <queue>MC_ASU_Provost</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>