force-app/main/default/objects/Subscription__c/listViews/MC_Educational_Outreach_Student_Service_Subscription.listView-meta.xml
<ListView>
    <fullName>MC_Educational_Outreach_Student_Service_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: Educational Outreach Student Service</label>
    <queue>MC_Educational_Outreach_Student_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>