force-app/main/default/objects/Subscription__c/listViews/MC_Subscription_Admins_Subscription.listView-meta.xml
<ListView>
    <fullName>MC_Subscription_Admins_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>MC: Marketing Cloud Admins</label>
    <queue>MC_Marketing_Cloud_Admins</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>